[package]
name = "trident_cli"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"
license = "MIT"

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
env_logger = {workspace = true}
log = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread"]}
tonic = {workspace = true}
tonic-prost = {workspace = true}
url = {workspace = true}

# Local dependencies
trident_api = { path = "../trident_api" }
osutils = { path = "../osutils" }
harpoon = { path = "../harpoon" }

[features]
dangerous-options = ["trident_api/dangerous-options"]
pytest-generator = []
